<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">


    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_text_setting"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/contactButton"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#0202F3"
                android:text="@string/contact"></TextView>
        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/courtNumber"
                android:textSize="20dp"></TextView>

            <Spinner
                android:id="@+id/courtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <CheckBox-->
<!--                android:id="@+id/mixCheckBox"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_marginLeft="5dp"></CheckBox>-->

<!--            <TextView-->
<!--                android:id="@+id/mixOnly_str"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/mix_str"-->
<!--                android:textSize="20dp"></TextView>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/restCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"></CheckBox>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_match_setting"
                android:textSize="20dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rest_match_setting_linear"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/restLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="10dp"
                    android:gravity="top"
                    android:orientation="vertical">

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/pairCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"></CheckBox>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixedPairs_setting"
                android:textSize="20dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:id="@+id/fixedPairs_setting_linear"
            android:visibility="gone">

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="left"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="5dp"-->
<!--                    android:text="@string/fixed"-->
<!--                    android:textSize="20dp"></TextView>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="　　"></TextView>-->

<!--                <TextView-->
<!--                    android:id="@+id/plusButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="＋"-->
<!--                    android:textSize="23dp"-->
<!--                    android:textStyle="bold"></TextView>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="　　"></TextView>-->

<!--                <TextView-->
<!--                    android:id="@+id/minusButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="―"-->
<!--                    android:textSize="23dp"-->
<!--                    android:textStyle="bold"></TextView>-->
<!--            </LinearLayout>-->

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/fixedLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_margin="10dp"
                    android:gravity="top"
                    android:orientation="vertical">

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="35dp"-->
<!--                        android:background="@drawable/border"-->
<!--                        android:gravity="center"-->
<!--                        android:orientation="horizontal">-->

<!--                        <Spinner-->
<!--                            android:id="@+id/members1"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"></Spinner>-->

<!--                        <Spinner-->
<!--                            android:id="@+id/members2"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"></Spinner>-->
<!--                    </LinearLayout>-->

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/memberButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/member_btn"></Button>

        <Button
            android:id="@+id/makeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/make_btn"></Button>
    </LinearLayout>


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3891518799622736/1551389584">
        <!--        テスト版-->
        <!--        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
    </com.google.android.gms.ads.AdView>
</RelativeLayout>