<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/settingButton"
        android:orientation="vertical"
        android:gravity="left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_text"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/contactButton"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#0202F3"
                android:text="@string/contact"></TextView>
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　　">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="＋"
                android:textStyle="bold"
                android:textSize="23dp"
                android:id="@+id/plusButton">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　　">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="―"
                android:textStyle="bold"
                android:textSize="23dp"
                android:id="@+id/minusButton">
            </TextView>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="left"
                android:id="@+id/linear_members">

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/settingButton"
        android:text="@string/comb_btn"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3891518799622736/1551389584">
<!--        テスト-->
<!--        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
<!--        本番-->
<!--        ads:adUnitId="ca-app-pub-3891518799622736/1551389584">-->
    </com.google.android.gms.ads.AdView>
</RelativeLayout>




